# lwsyslogger

./: .gitignore  ChangeLog  Makefile.am  NEWS  README  acinclude.m4  autogen.sh  build_debs.sh.in  configure.ac  lwsyslogger.spec.in
conf/: Makefile.am  lwlogger-sample.conf  lwsyslogger-sample.conf
debian/: Makefile.am  changelog.src  control.src  copyright  postinst  postrm  prerm  rules
debian/source/: Makefile.am
docs/: Makefile.am
docs/manpages/: Makefile.am  lwsyslogger.conf.xml  lwsyslogger.xml
helpers/: Makefile.am
icons/: Makefile.am  send_syslog-16x16.xpm
src/: Makefile.am  addressfilter.cpp  addressfilter.h  cmdswitch.h  local_syslog.h  lwlogger.cpp  lwlogger.h  lwsyslogger.cpp  lwsyslogger.h  message.cpp  message.h  proc_factory.cpp  proc_factory.h  proc_filebyhostname.cpp  proc_filebyhostname.h  proc_simplefile.cpp  proc_simplefile.h  processor.cpp  processor.h  profile.cpp  profile.h  receiver.cpp  receiver.h  recv_factory.cpp  recv_factory.h  recv_udp.cpp  recv_udp.h
src/lwsyslogger/: Makefile.am  addressfilter.cpp  cmdswitch.cpp  cmdswitch.h  lwsyslogger.cpp  lwsyslogger.h  message.cpp  message.h  proc_factory.cpp  proc_factory.h  proc_filebyhostname.cpp  proc_filebyhostname.h  proc_sendmail.cpp  proc_sendmail.h  proc_simplefile.cpp  proc_udp.cpp  proc_udp.h  processor.cpp  processor.h  profile.cpp  profile.h  receiver.cpp  receiver.h  recv_udp.cpp  recv_udp.h  sendmail.cpp  sendmail.h
src/tests/: Makefile.am  cmdswitch.cpp  send_syslog.cpp  send_syslog.h
src/utils/: Makefile.am  cmdswitch.cpp  cmdswitch.h  send_syslog.cpp
systemd/: Makefile.am  lwsyslogger.service.in
xdg/: Makefile.am  lwsyslogger-send_syslog.desktop
